--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -30,8 +30,8 @@
     	<!-- Top Header Left Section -->
         <div class="col-md-6 col-sm-6 top-header-contact">
         	<ul>
-            	<li><i class="fa  fa-phone"></i>123 1234 8548</li>
-            	<li><i class="fa   fa-envelope"></i>info@builder&amp;contractors.com</li>
+            	<li><i class="fa  fa-phone"></i>04161913026</li>
+            	<li><i class="fa   fa-envelope"></i>fakhrealam661@gmail.com</li>
             </ul>
         </div>
         <!-- Top Header RIght Section -->
@@ -1346,7 +1346,7 @@
 				document.write(today);
 				
             </script>
-    		Builder&amp;Contractors.com All rights reserved. Powered by: <a href="#" class="default-color" target="_blank">Ali Turi<i class="fa fa-home"></i></a></p>
+    		Builder&amp;Contractors.com All rights reserved. Powered by: <a href="#" class="default-color" target="_blank">Fakhar Mohsin Unati<i class="fa fa-home"></i></a></p>
     </div>
 </div>
 
