--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -124,7 +124,7 @@
             <div class="item active">
                 <img src="images/slider-1.jpg" alt="">
                 <div class="carousel-caption main-slider-caption">
-                	<p class="default-color">All you need for building</p>
+                	<p class="default-color">Anything you need For Building Construction</p>
                     <p>Creative &amp; Professional</p>
                 </div>
             </div>
@@ -138,7 +138,7 @@
             <div class="item">
                 <img src="images/slider-3.jpg" alt="">
                 <div class="carousel-caption main-slider-caption">
-                	<p class="default-color">All you need for building</p>
+                	<p class="default-color">Anything you need For Building Construction</p>
                     <p>Creative &amp; Professional</p>
                 </div>
             </div>
